2004-12-28  Sven Neumann  <sven@gimp.org>

	* Made 2.2.1 release.

2004-12-28  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.[ch] (gimp_install_procedure, gimp_install_temp_proc):
	renamed menu_path parameter to menu_label and added a pointer to
	gimp_plugin_menu_register()

	* app/widgets/gimpsizebox.c (gimp_size_box_constructor): removed
	unused variables.

2004-12-28  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpbrushcore.c (gimp_brush_core_subsample_mask):
	reverted Bill's change since it is obviously not the right fix.
	Allocate the array larger to avoid the crash. We need to
	investigate bug #161323 further.

2004-12-27  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* app/paint/gimpbrushcore.c (gimp_brush_core_subsample_mask):
	don't set array outside its bounds.  Should fix bug #161323.
	Credit to Robert Ögren for figuring out what was wrong.
	
2004-12-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/colortoalpha.c: if possible, use
	gimp_preview_draw_buffer() so that the selection mask is correctly
	previewed. Minor cleanups.

2004-12-27  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpregioniterator.c: added some checks to avoid
	division by zero.

	* libgimpwidgets/gimppreviewarea.[ch]: minor cleanups, improved
	API documentation.

2004-12-26  DindinX  <dindinx@gimp.org>

	* plug-ins/gfig/gfig-arc.c
	* plug-ins/gfig/gfig-bezier.c
	* plug-ins/gfig/gfig-circle.c
	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gfig/gfig-ellipse.c
	* plug-ins/gfig/gfig-line.c
	* plug-ins/gfig/gfig-poly.c
	* plug-ins/gfig/gfig-spiral.c
	* plug-ins/gfig/gfig-star.c
	* plug-ins/gfig/gfig-style.h
	* plug-ins/gfig/gfig.h: plugged some memory-leaks, and done some
	cleanups.

2004-12-26  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* app/core/gimpbrush.c: don't ask for preview with
	zero width or height, fixes bug #162232.

	* app/base/brush-scale.c: remove tabs and trailing
	whitespace.

2004-12-26  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* app/actions/documents-commands.c